補丁 ch.4/6/7/15/22/27/30/44 + 新增 ch.52-55
補丁（現有章節補充）：
- ch.4  補 Metaspace vs PermGen、ClassLoader 雙親委派模型
- ch.6  補面試必考算法模式：Two Pointers、Sliding Window、Backtracking、二分搜尋變體
- ch.7  補 Java 14-21 新特性：Text Block、Switch Expressions、Records、
         Sealed Classes、Pattern Matching instanceof、Virtual Threads (Java 21)
- ch.15 補 Proxy 模式（Spring AOP 底層）、Chain of Responsibility（Filter Chain）
- ch.22 補 Swagger/OpenAPI 整合（springdoc-openapi）完整設定與 JWT 支援
- ch.27 補 LazyInitializationException 根本原因與三種解法（open-in-view 反模式說明）
- ch.30 補 JWT 主動失效：Redis 黑名單實作 + Refresh Token 方案，含選型對比
- ch.44 補 MySQL 行鎖/間隙鎖/Next-Key Lock 圖解、死鎖偵測、降低鎖競爭技巧

新增章節（4 篇）：
- ch.52 Spring AOP：@Aspect/@Around/自訂注解/防重複提交/審計日誌/AOP 陷阱
- ch.53 Elasticsearch：倒排索引/Text vs Keyword/複合查詢/高亮/聚合/雙寫同步
- ch.54 資料庫 Migration（Flyway）：版本化 SQL/多環境/CI/CD/藍綠部署策略
- ch.55 gRPC 深入：Protocol Buffers/四種 RPC/Spring Boot Server+Client/攔截器

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>